[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Inventory/InventoryBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/EntityGUIs/FurnaceGUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/Seperator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shared/symbols.svg" type="Texture" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float fill_amount : hint_range(0, 1.0) = 0.0;

void fragment() {
	vec4 color = MODULATE;
	float pixel_fill = step(1.0 - fill_amount, UV.y);
	
	COLOR = clamp(color + (color * pixel_fill), 0, 1);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/fill_amount = 0.0

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float fill_amount : hint_range(0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float pixel_fill = step(UV.x * 8.0, fill_amount);
	
	COLOR = clamp(color + (color * pixel_fill), 0, 1);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/fill_amount = 0.0

[node name="FurnaceGUI" type="MarginContainer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 158.0
margin_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 158.0

[node name="OreBar" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 50.0
margin_bottom = 0.0
slot_count = 1
item_filters = "Ore, Lumber"

[node name="Seperator" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 50.0
margin_bottom = 54.0

[node name="FuelBar" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 83.0
slot_count = 1
item_filters = "Fuels"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer/FuelBar"]
modulate = Color( 0.188235, 0.462745, 1, 1 )
material = SubResource( 4 )
margin_left = 22.0
margin_right = 27.0
margin_bottom = 25.0
rect_min_size = Vector2( 5, 25 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 158.0

[node name="Seperator" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 50.0
margin_bottom = 50.0

[node name="Arrow" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer2/Arrow"]
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 10, 10, 50, 50 )

[node name="Seperator2" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 158.0

[node name="Seperator" parent="HBoxContainer/VBoxContainer3" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 50.0
margin_bottom = 50.0

[node name="Output" parent="HBoxContainer/VBoxContainer3" instance=ExtResource( 1 )]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 54.0
slot_count = 1
item_filters = "Ingot"

[node name="Seperator2" parent="HBoxContainer/VBoxContainer3" instance=ExtResource( 3 )]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 108.0

[node name="Tween" type="Tween" parent="."]
[connection signal="inventory_changed" from="HBoxContainer/VBoxContainer/OreBar" to="." method="_on_OreBar_inventory_changed"]
[connection signal="inventory_changed" from="HBoxContainer/VBoxContainer/FuelBar" to="." method="_on_FuelBar_inventory_changed"]
